[package]
resolver = '2'
name = "cw-oracle-hub"
version = "0.2.0"
authors = ["Oraichain Labs"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oraichain/oraiswap.git"
homepage = "https://orai.io"
documentation = "https://github.com/oraichain/oraiswap.git"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
rpath = false
lto = true
overflow-checks = true
panic = 'abort'

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "=1.2" }
cosmwasm-schema = { version = "=1.2" }
cosmwasm-storage = { version = "=1.2" }
thiserror = "1.0.26"

cw-utils = { version = "1.0.1" }
cw2 = { version = "1.0.1" }
cw3 = { version = "1.0.1" }
cw4 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1" }
cw-storage-plus = { version = "1.0.1" }
cw4-group = { version = "1.0.1" }
cw3-fixed-multisig = { version = "1.0.1" }

[dev-dependencies]
cosmwasm-vm = { version = "=1.2" }
